--- a/interfaces/Config/templates/config_cat.tmpl
+++ b/interfaces/Config/templates/config_cat.tmpl
@@ -27,8 +27,7 @@
                             <th>&nbsp;</th>
                         </tr>
                         <!--#end if#-->
-                        <tr class="<!--#if $odd then " alt " else " "#-->" <!--#if $slot.name=='*' #-->style="background-color: #FFFFE0;"
-                            <!--#end if#-->>
+                        <tr class="<!--#if $odd then " alt " else " "#-->" <!--#if $slot.name=='*' #-->style="background-color: #FFFFE0;"<!--#end if#-->>
                             <td>
                                 <input type="hidden" name="session" value="$session" />
                                 <input type="hidden" value="$slot.name" name="name" />
