--- a/interfaces/Config/templates/main.tmpl
+++ b/interfaces/Config/templates/main.tmpl
@@ -1,2 +1,3 @@
 /* This file was intentionally left blank and is only needed for 'skin' detection routine */
 /* https://github.com/thezoggy/sabnzbd-uni_Config */
+/* Updated Nov 2015 by Safihre for 0.8.x */
