--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -18,7 +18,7 @@
                 </div>
                 <div class="field-pair">
                     <label class="config" for="download_dir">$T('opt-download_dir')</label>
-                    <input type="text" name="download_dir" id="download_dir" value="$download_dir" />
+                    <input type="text" name="download_dir" id="download_dir" value="$download_dir" autocomplete="off" />
                     <span class="desc">$T('explain-download_dir')</span>
                 </div>
                 <div class="field-pair">
@@ -107,17 +107,16 @@
 
     </form>
 </div><!-- /colmask -->
-
-<script>
-\$(document).ready(function(){
-    \$('#download_dir').fileBrowser({ title: 'Select $T('opt-download_dir')' });
-    \$('#complete_dir').fileBrowser({ title: 'Select $T('opt-complete_dir')' });
-    \$('#dirscan_dir').fileBrowser({ title: 'Select $T('opt-dirscan_dir')' });
-    \$('#script_dir').fileBrowser({ title: 'Select $T('opt-script_dir')' });
-    \$('#email_dir').fileBrowser({ title: 'Select $T('opt-email_dir')' });
-    \$('#admin_dir').fileBrowser({ title: 'Select $T('opt-admin_dir')' });
-    \$('#log_dir').fileBrowser({ title: 'Select $T('opt-log_dir')' });
-    \$('#nzb_backup_dir').fileBrowser({ title: 'Select $T('opt-nzb_backup_dir')' });
-});
+<script type="text/javascript">
+    jQuery(document).ready(function() {
+        // Add autocomplete and file-browser
+        \$('#download_dir, #complete_dir, #dirscan_dir, #script_dir, #email_dir, #admin_dir, #log_dir, #nzb_backup_dir').typeahead({
+            source: function (query, process) {
+                return \$.get(folderBrowseUrl + '&compact=1&term=' + query, function (data) {
+                    return process(data);
+                });
+            }
+        }).fileBrowser();
+    })
 </script>
 <!--#include $webdir + "/_inc_footer_uc.tmpl"#-->
